<resources>
    <string name="app_name">AvitoApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Логин…</string>
    <string name="password">Пароль…</string>
    <string name="txt_enter">Вход</string>
    <string name="txt_registration">Регистрация</string>
    <string name="btn_enter">Войти</string>
    <string name="name">Имя…</string>
    <string name="email">Email…</string>
    <string name="confirm_password">Подтверждение пароля…</string>
    <string name="emailRegularPattern">^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$</string>
    <string name="mustntEmptyField">Поле не должно быть пустым</string>
    <string name="incorrectEmail">Некорректный email</string>
    <string name="incorrectPassword">Ошибка, длинна пароля должна быть больше 8 и меньше 24 символов</string>
    <string name="userNotFound">Пользователь не найден</string>
    <string name="haventAccount">У меня нет аккаунта</string>
    <string name="fragment_login_null">Fragment Login == null</string>
    <string name="fragment_registration_null">Fragment Registration == null</string>
    <string name="isntSamePassword">Пароли не совпадают</string>
    <string name="registration_error">Ошибка регистрации</string>
    <string name="have_already_account">У меня есть аккаунт</string>
    <string name="repeat_password">Повторите пароль…</string>
    <string name="productlistfragment_null">ProductListFragment == null</string>
    <string name="techincs">Техника</string>
    <string name="bags_category_name">Сумки</string>
    <string name="clothing_category_name">Одежда</string>
    <string name="computers_category">computers</string>
    <string name="bags_category">bags</string>
    <string name="clothing_category">clothing</string>
    <string name="short_string">%.30s…</string>
    <string name="price_string">%d ₽</string>
    <string name="old_price">Старая цена: %d ₽</string>
    <string name="new_pirce">Новая цена: %d ₽</string>
    <string name="price">Цена: %d₽</string>
    <string name="all_products">Все товары</string>
    <string name="product_category">Категория(-и) товара: %s</string>
    <string name="product_description">Описание: %s</string>
    <string name="product_name">%s</string>
    <string name="retry_response">Попробовать еще раз</string>
    <string name="response_error_text">Ошибка отправки запроса</string>
    <string name="back_text">Назад</string>
</resources>